# urd

./: .dockerignore  .gitignore  Dockerfile  LICENSE  P1_REAL_MCP_STDIO.md  PATCH_NOTES.md  README.md  TACTIC_GUIDE.md  VALIDATION.md  check-env.ps1  check-env.sh  docker-compose.yml  lab.cmd  lab.ps1  lab.sh  pyproject.toml
examples/: compositional.divergence.json  compositional.dot
examples/external-host/: README.md  findings.dot  findings.json  normalized_to_urd_trace.jsonl  sample_host_trace.jsonl
examples/external-host-witness/: NOT_INCLUDED.md  README.md
examples/findings/: baseline.dot  baseline.findings.json  compositional.ablated.dot  compositional.ablated.findings.json  compositional.findings.json  compositional.policy.json
examples/findings/planner/: llm-sim.findings.json
examples/findings/retarget/: billing.dot  billing.findings.json  customer.findings.json  incident.findings.json
examples/real-host/: AGENTS.md  PROMPT.txt  README.md
examples/traces/: baseline.trace.jsonl  compositional.ablated.trace.jsonl  compositional.trace.jsonl
examples/traces/planner/: llm-sim.trace.jsonl  ollama-gemma4-e4b.trace.jsonl
examples/traces/retarget/: billing.trace.jsonl  customer.trace.jsonl  incident.trace.jsonl
guard/: README.md  __init__.py  cli.py  policy.py
guard/tests/: test_cli.py  test_policy.py
lab/: __init__.py  host.py  trace_view.py  untrusted_source.py
lab/manifests/: admin.json  host.json  weather.json
lab/mcp_stdio/: __init__.py  _jsonrpc.py  _server_base.py  _shared_trace.py  admin_server.py  host_client.py  weather_server.py
lab/scenarios/: __init__.py  baseline.py  compositional.py
lab/servers/: __init__.py  admin.py  weather.py
mcp/: __init__.py  types.py
scripts/: normalize_external_host_trace.py  real_host_config.py  run_lab.py
tests/: test_c2.py  test_cli_exit_codes.py  test_divergence.py  test_guard_contract.py  test_hardening.py  test_heuristics.py  test_manifests.py  test_mcp_stdio.py  test_p2_breach_impact.py  test_p4_planner_mode.py  test_p5_external_adapter.py  test_p8_policy.py  test_p9_local_llm_planner.py  test_run_lab.py  test_seams.py  test_shared_trace.py  test_trace.py  test_verify.py
urd/: __init__.py  c2.py  cli.py  divergence.py  heuristics.py  manifests.py  policy.py  pretty.py  recon.py  runtime.py  seams.py  trace.py
