[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urd"
version = "0.1.0"
description = "Cross-server authority injection for MCP agent stacks — find the seam, land the injection, prove the kill."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Red Asgard" },
]
keywords = ["mcp", "security", "agent", "authority-injection", "cross-server", "offensive-security", "red-team"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/redasgard/urd"
Repository = "https://github.com/redasgard/urd"

[project.scripts]
urd = "urd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["urd", "lab", "mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
